fix receipt add btn position on mobile

--- a/style/sass/main.sass
+++ b/style/sass/main.sass
@@ -1111,8 +1111,9 @@ input[type="checkbox"]
         top: initial
         bottom: 463px
         @media screen and (max-width: 375px)
-          bottom: 400px
-          bottom: 437px
+          // bottom: 400px
+          // bottom: 437px
+          bottom: 470px
     .remove_receipt
       background: url(../../asset/remove_receipt.png) no-repeat
       background-size: 48px 48px
@@ -1127,8 +1128,9 @@ input[type="checkbox"]
         top: initial
         bottom: 463px
         @media screen and (max-width: 375px)
-          bottom: 400px
+          // bottom: 400px
           // bottom: 405px
+          bottom: 470px
 
     .check
       +wh(721px, 21px)
